Make sure no marker is behind the filters

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -97,9 +97,7 @@
   list-style: none;
   padding: 0;
   float: right;
-  z-index: 1;
   background-color: #fff;
-  border: 5px solid #5BC0DE;
   width: 500px;
 
   li {
